--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,6 @@
 theme: jekyll-theme-slate
 show_downloads: true
+github:
+  zip_url: https://github.com/heschy/HeschyCrypt/archive/refs/tags/v1.0.zip
+  tar_url: https://github.com/heschy/HeschyCrypt/archive/refs/tags/v1.0.tar.gz
+
