--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-theme: jekyll-theme-slate
+theme: jekyll-theme-leap-day
 show_downloads: true
 github:
   zip_url: https://github.com/heschy/HeschyCrypt/archive/refs/tags/v1.0.zip
