--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 theme: jekyll-theme-leap-day
 show_downloads: true
 github:
-  zip_url: https://github.com/heschy/HeschyCrypt/archive/refs/tags/v1.0.zip
-  tar_url: https://github.com/heschy/HeschyCrypt/archive/refs/tags/v1.0.tar.gz
+  zip_url: https://github.com/heschy/HeschyCrypt/zipball/main
+  tar_url: https://github.com/heschy/HeschyCrypt/tarball/main
 
